@@ -48,8 +48,6 @@ class SyncThread(QtCore.QThread):
         self.port = port
         self.username = username
         self.password = password
-        # A fast moving progress bar seems to cause crashes on Windows.
-        self.show_numeric_progress_bar = True # (sys.platform != "win32")
 
     def run(self):
         try:
@@ -97,20 +95,16 @@ class SyncThread(QtCore.QThread):
         self.set_progress_text_signal.emit(text)
 
     def set_progress_range(self, maximum):
-        if self.show_numeric_progress_bar:
-            self.set_progress_range_signal.emit(maximum)
+        self.set_progress_range_signal.emit(maximum)
 
     def set_progress_update_interval(self, value):
-        if self.show_numeric_progress_bar:
-            self.set_progress_update_interval_signal.emit(value)
+        self.set_progress_update_interval_signal.emit(value)
 
     def increase_progress(self, value):
-        if self.show_numeric_progress_bar:
-            self.increase_progress_signal.emit(value)
+        self.increase_progress_signal.emit(value)
 
     def set_progress_value(self, value):
-        if self.show_numeric_progress_bar:
-            self.set_progress_value_signal.emit(value)
+        self.set_progress_value_signal.emit(value)
 
     def close_progress(self):
         self.close_progress_signal.emit()
